--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
           {%- endif -%}
         {% endfor -%}
         <li class="nav-item">
-          <a class="nav-link" href="{{ site.github.repository_url }}">Sigueme</a>
+          <a class="nav-link" href="https://footballcloud.net/aitorcarrillo/">Aitor Carrillo</a>
         </li>
       </ul>
     </div>
